# breaks-machine

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/rules/: cicd.md  claude-code-setup.md  customization.md  ssh-setup.md  troubleshooting.md  uv-guide.md
.devcontainer/: README.md  devcontainer.json
.devcontainer-work/: README.md  devcontainer.json
.github/: RELEASING.md
.github/workflows/: ci.yml  release.yml
src/breaks_machine/: __init__.py  cli.py  converter.py  detector.py  processor.py  stretcher.py
tests/: __init__.py  conftest.py  test_cli.py  test_converter.py  test_detector.py  test_processor.py  test_stretcher.py
