[project]
name = "breaks-machine"
version = "0.1.0"
description = "Time-stretch drum breaks to target BPMs with automatic tempo detection"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "librosa>=0.11.0",
    "pyrubberband>=0.4.0",
    "soundfile>=0.13.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
breaks-machine = "breaks_machine.cli:main"

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [".venv", "__pycache__", ".git"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = ["-v", "--tb=short"]
